# kocotree-skills-desktop

./: README.md  index.html  package.json  pnpm-lock.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_PLAN.md  GLOSSARY.md  INTERVIEW_DECISIONS.md  PRODUCT_DESIGN.md  openapi.yaml
docs/adr/: 0001-contract-first-mock-api.md  0002-platform-metadata-and-package.md  0003-local-installation-state.md  0004-skill-ownership-version-lineage.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/installer/: mod.rs
src/api/: contracts.ts  index.ts  mockData.ts  mockLocalSkillService.ts  mockSkillApi.test.ts  mockSkillApi.ts  schema.d.ts  skillPackage.ts  tauriInstaller.ts  zipInspector.ts
src/components/: AppIcon.tsx  InstallConfirmModal.tsx  InstallFeedbackModal.tsx  MySkillsPage.tsx  NotificationPanel.tsx  OwnershipTransferModal.tsx  ReasonActionModal.tsx  SkillDetailModal.tsx  SkillDetailSheet.tsx  SkillMetadataModal.tsx  UploadPage.tsx
src/components/ui/: KocotreeUi.css  KocotreeUi.tsx  index.ts
src/data/: mockSkills.ts
src/types/: skill.ts
