[package]
name = "kocotree-skills-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# 更多字段及其定义请参阅 https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# `_lib` 后缀用于确保库名唯一，避免与二进制程序名称冲突。
# 该问题主要出现在 Windows，详见 https://github.com/rust-lang/cargo/issues/8519
name = "kocotree_skills_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
dirs = "6"
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
zip = { version = "4", default-features = false, features = ["deflate"] }

# 优化配置说明：https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
